# code_fragment

./: .gitmodules
Robotics_Vision_and_Control/: CHANGELOG.rst
Robotics_Vision_and_Control/Bicycle/: BicycleKinematic.m  FollowLine.m  FollowTrajectory.m  ModelText.m  MoveToPoint.m  MoveToPose.m  PlotCarProfile.m  README.md  angDiff.m
Robotics_Vision_and_Control/ControlLaw/: PID.m
mpc/src/model_predict_control/: CMakeLists.txt  package.xml
mpc/src/model_predict_control/include/: mpc_single_shooting.h
mpc/src/model_predict_control/script/: Draw_MPC_point_stabilization_v1.m  mpc_single_shooting.m  shift.m
mpc/src/model_predict_control/src/: main.cpp
planning_algorithm/Interpolation/CubicSpline/: CubicSpline.m
rapidjson/: CMakeLists.txt  config_builder.h  config_cbuilder.cc  config_manager.h  config_struct.h  config_utils.h  main.cpp
